Added mobile view and facebook buttons

--- a/chernonabqlo-master/Web/CyberSecurityBG.Web/Areas/Administration/Views/AdminNews/Create.cshtml
+++ b/chernonabqlo-master/Web/CyberSecurityBG.Web/Areas/Administration/Views/AdminNews/Create.cshtml
@@ -31,12 +31,13 @@
     <div>
         <label asp-for="Category">Категория</label>
         <select class="form-control" style="color:black" asp-for="Category">
-            <option value="Politics">Политика</option>
-            <option value="Conspiracy">Конспирация</option>
-            <option value="Technology">Технологии</option>
-            <option value="Business">Бизнес</option>
-            <option value="Sport">Спорт</option>
-            <option value="Other">Други</option>
+            <option value="България">България</option>
+            <option value="Свят">Свят</option>
+            <option value="Бизнес">Бизнес</option>
+            <option value="Технологии">Технологии</option>
+            <option value="Спорт">Спорт</option>
+            <option value="Други">Други</option>
+            <option value="Коронавирус">Коронавирус</option>
         </select>
         <span asp-validation-for="Category" class="text-danger"></span>
     </div>
