--- a/chernonabqlo-master/Web/CyberSecurityBG.Web/Views/News/All.cshtml
+++ b/chernonabqlo-master/Web/CyberSecurityBG.Web/Views/News/All.cshtml
@@ -7,34 +7,41 @@
     @if (count < 2)
     {
         //width:385px
-    <div style="width:380px; float:left">
-        <div class="card" style="width:350px; background-color:#282726;">
-            @*"width:329px; height:329px"*@
-            <img class="card-img-top" src="@news.PictureUrl" alt="Card image cap" style="width:350px; height:350px;">
-            <div class="card-body" style="height:190px">
-                <strong><a class="card-title" style="color:seashell; text-align:center" asp-controller="News" asp-action="ById" asp-route-id="@news.Id">@news.ShortTitle</a></strong>
-                <p class="card-text" style="color:seashell; display: block;">@news.ShortContent</p>
-                <div style="position:absolute; bottom:10px; left:10px;">
-                    <a asp-controller="News" asp-action="ById" asp-route-id="@news.Id" class="btn btn-primary">Още...</a>
-                    <img src="https://cdn2.iconfinder.com/data/icons/picol-vector/32/view-512.png" style="margin-left:5px" height="25" width="25" />
-                    <span align="right" class="text-secondary" style="font-size:20px">@news.Views</span>
+        <div style="width:372.5px; display:inline-block">
+            <div class="card" style="width:350px; background-color:#282726;">
+                @*"width:329px; height:329px"*@
+                <img class="card-img-top" src="@news.PictureUrl" alt="Card image cap" style="width:350px; height:350px;">
+                <div class="card-body" style="height:190px">
+                    <strong><a class="card-title" style="color:seashell; text-align:center" asp-controller="News" asp-action="ById" asp-route-id="@news.Id">@news.ShortTitle</a></strong>
+                    <p class="card-text" style="color:seashell; display: block;">@news.ShortContent</p>
+                    <div style="position:absolute; bottom:10px; left:10px;">
+                        <a asp-controller="News" asp-action="ById" asp-route-id="@news.Id" class="btn btn-primary">Още...</a>
+                        <i class="fas fa-eye" style="margin-left:7px; margin-right:7px; margin-top:5px;"></i>
+                        <span align="right" class="text-secondary" style="font-size:15px">@news.Views</span>
+                        <i class="far fa-calendar-alt" style="margin-left:7px; margin-right:7px; margin-top:5px;"></i>
+                        <span align="right" class="text-secondary" style="font-size:15px">@news.CreatedOnAsString</span>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
         count++;
     }
     else if (count == 2)
     {
-        <div class="card" style="width:350px; background-color:#282726;">
-            <img class="card-img-top" src="@news.PictureUrl" alt="Card image cap" style="width:350px; height:350px;">
-            <div class="card-body" style="height:190px">
-                <strong><a class="card-title" style="color:seashell; text-align:center" asp-controller="News" asp-action="ById" asp-route-id="@news.Id">@news.ShortTitle</a></strong>
-                <p class="card-text" style="color:seashell; display: block;">@news.ShortContent</p>
-                <div style="position:absolute; bottom:10px; left:10px;">
-                    <a asp-controller="News" asp-action="ById" asp-route-id="@news.Id" class="btn btn-primary">Още...</a>
-                    <img src="https://cdn2.iconfinder.com/data/icons/picol-vector/32/view-512.png" style="margin-left:5px" height="25" width="25" />
-                    <span align="right" class="text-secondary" style="font-size:20px">@news.Views</span>
+        <div style="width:350px; display:inline-block">
+            <div class="card" style="width:350px; background-color:#282726;">
+                @*"width:329px; height:329px"*@
+                <img class="card-img-top" src="@news.PictureUrl" alt="Card image cap" style="width:350px; height:350px;">
+                <div class="card-body" style="height:190px">
+                    <strong><a class="card-title" style="color:seashell; text-align:center" asp-controller="News" asp-action="ById" asp-route-id="@news.Id">@news.ShortTitle</a></strong>
+                    <p class="card-text" style="color:seashell; display: block;">@news.ShortContent</p>
+                    <div style="position:absolute; bottom:10px; left:10px;">
+                        <a asp-controller="News" asp-action="ById" asp-route-id="@news.Id" class="btn btn-primary">Още...</a>
+                        <i class="fas fa-eye" style="margin-left:7px; margin-right:7px; margin-top:5px;"></i>
+                        <span align="right" class="text-secondary" style="font-size:15px">@news.Views</span>
+                        <i class="far fa-calendar-alt" style="margin-left:7px; margin-right:7px; margin-top:5px;"></i>
+                        <span align="right" class="text-secondary" style="font-size:15px">@news.CreatedOnAsString</span>
+                    </div>
                 </div>
             </div>
         </div>
@@ -43,7 +50,7 @@
     else
     {
         <br />
-        <div class="card flex-md-row mb-4 box-shadow h-md-250" style=" background-color:#1b1b18; -webkit-box-shadow: 10px 10px 55px 0px rgba(0,0,0,0.34);
+        <div class="card flex-md-row mb-4 box-shadow h-md-250" style="margin-top:10px; background-color:#1b1b18; -webkit-box-shadow: 10px 10px 55px 0px rgba(0,0,0,0.34);
         -moz-box-shadow: 10px 10px 55px 0px rgba(0,0,0,0.34);
         box-shadow: 10px 10px 55px 0px rgba(0,0,0,0.34);">
             <img class="card-img-right flex-auto d-none d-md-block" alt="Thumbnail [200x250]" style="width: 250px; height: 250px;" src="@news.PictureUrl" data-holder-rendered="true">
@@ -51,16 +58,64 @@
                 <div style="display: inline">
                     <h3 class="mb-0" width="90%">
                         <strong><a style="color:seashell" asp-controller="News" asp-action="ById" asp-route-id="@news.Id">@news.Title</a></strong>
-                        <img src="https://cdn2.iconfinder.com/data/icons/picol-vector/32/view-512.png" style="margin-left:5px" height="25" width="25" />
-                        <span align="right" class="text-secondary" style="font-size:20px">@news.Views</span>
+                        <i class="fas fa-eye" style="margin-left:7px; margin-right:7px; margin-top:5px;"></i>
+                        <span align="right" class="text-secondary" style="font-size:20px; top:5px">@news.Views</span>
                     </h3>
                 </div>
-                <div class="mb-1 text-muted">@news.CreatedOnAsString</div>
+                <div>
+                    <i class="far fa-calendar-alt" style="margin-left:7px; margin-right:7px; margin-top:5px;"></i>
+                    <span class="mb-1 text-muted">@news.CreatedOnAsString</span>
+                </div>
                 <p class="card-text mb-auto">@news.ShortContent</p>
-                <a asp-controller="News" asp-action="ById" asp-route-id="@news.Id">Още...</a>
+                <a asp-controller="News" asp-action="ById" asp-route-id="@news.Id" class="btn btn-primary">Още...</a>
             </div>
         </div>
         <br />
         count = 0;
     }
 }
+
+
+@{
+
+}
+<nav>
+    <ul class="pagination justify-content-center">
+        @if (this.Model.CurrentPage == 1)
+        {
+            <li class="page-item disabled">
+                <a class="page-link" href="#">Предишна страница</a>
+            </li>
+        }
+        else
+        {
+            <li class="page-item">
+                <a class="page-link" asp-route="newsCategory" asp-route-category="@this.Model.Category" asp-route-page="@(this.Model.CurrentPage - 1)">Предишна страница</a>
+            </li>
+        }
+        @for (int i = 1; i <= this.Model.PagesCount; i++)
+        {
+            var active = string.Empty;
+            if (i == this.Model.CurrentPage)
+            {
+                active = "active";
+            }
+            //tofix
+            <li class="page-item @active">
+                <a class="page-link" asp-route="newsCategory" asp-route-category="@this.Model.Category" asp-route-page="@i">@i</a>
+            </li>
+        }
+        @if (this.Model.CurrentPage == this.Model.PagesCount)
+        {
+            <li class="page-item disabled">
+                <a class="page-link" href="#">Следваща страница</a>
+            </li>
+        }
+        else
+        {
+            <li class="page-item">
+                <a class="page-link" asp-route="newsCategory" asp-route-category="@this.Model.Category" asp-route-page="@(this.Model.CurrentPage + 1)">Следваща страница</a>
+            </li>
+        }
+    </ul>
+</nav>
