--- a/chernonabqlo-master/Web/CyberSecurityBG.Web/Views/Shared/_LoginPartial.cshtml
+++ b/chernonabqlo-master/Web/CyberSecurityBG.Web/Views/Shared/_LoginPartial.cshtml
@@ -12,23 +12,29 @@
                     <a class="nav-link" style="color:seashell" border-radius:10%" asp-controller="AdminPosts" asp-action="GetAllUsers" asp-area="Administration">Потребители</a>
                 </li>*@
                 <li class="nav-item">
-                    <a class="nav-link" style="color:seashell" border-radius:10%" asp-controller="AdminNews" asp-action="Create" asp-area="Administration">Добави Новина</a>
+                    <a class="nav-link" style="color:seashell" border-radius:10%" asp-controller="AdminNews" asp-action="Create" asp-area="Administration">Create</a>
+                </li>
+                <li class="nav-item">
+                    <form method="post" asp-controller="AdminNews" asp-action="Rssfeed" asp-area="Administration">
+                    <button class="nav-link btn btn-link" style="color:seashell" border-radius:10%">upd-rss</button>
+                    </form>
                 </li>
             }
 
             @*<li class="nav-item">
                 <a class="nav-link" style="color:seashell" asp-area="" asp-controller="Forum" asp-action="Topics">Форум</a>
             </li>*@
-             
+
             <li class="nav-item">
                 <a class="nav-link" style="color:seashell" asp-controller="Users" asp-action="UserProfile" title="Manage">@(this.User.Identity.Name)</a>
             </li>
 
             <li class="nav-item">
                 <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@(this.Url.Action("Index", "Home", new { area = string.Empty }))">
-                    <button type="submit" class="nav-link btn btn-link text-dark">Изход</button>
+                    <button type="submit" style="color:seashell" class="nav-link btn btn-link">Exit</button>
                 </form>
             </li>
+
         }
         else
         {
