--- a/chernonabqlo-master/Web/CyberSecurityBG.Web/wwwroot/css/site.css
+++ b/chernonabqlo-master/Web/CyberSecurityBG.Web/wwwroot/css/site.css
@@ -12,6 +12,7 @@ a.navbar-brand {
 
 html {
     font-size: 14px;
+    overflow-x: hidden;
 }
 @media (min-width: 768px) {
     html {
@@ -104,6 +105,7 @@ html {
 body {
     /* Margin bottom by footer height */
     margin-bottom: 60px;
+    overflow-x: hidden;
 }
 .footer {
     position: absolute;
